--- a/content/publication/saed/cite.bib
+++ b/content/publication/saed/cite.bib
@@ -1,8 +1,8 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
+@inproceedings{zobaed2021saed,
+  title={SAED: Edge-Based Intelligence for Privacy-Preserving Enterprise Search on the Cloud},
+  author={Zobaed, Sakib M and Salehi, Mohsen Amini and Buyya, Rajkumar},
+  booktitle={2021 IEEE/ACM 21st International Symposium on Cluster, Cloud and Internet Computing (CCGrid)},
+  pages={366--375},
+  year={2021},
   organization={IEEE}
 }
